--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
-    "lucide-react": "0.436.0"
+    "next": "14.2.6",
+    "lucide-react": "0.436.0",
     "shadcn-ui": "0.8.0"
   },
   "devDependencies": {
